Fix service location overflow on mobile.

--- a/themes/finna2/less/finna/organisation-info.less
+++ b/themes/finna2/less/finna/organisation-info.less
@@ -460,9 +460,6 @@
                         .service-type-container {
                             flex: 0 1 60%;
                         }
-                        .service-location-container {
-                            flex: 1;
-                        }
 
                         label {
                             font-weight: normal;
